@@ -1,2 +1,0 @@
-MainClass/public;int;mainClassMethod1;();{};public;void;mainClassMethod2;();{};public;String;randomMethodStringReturn;();{};public;void;randomMethodVoid__2_;();{};
-InnerClass/public;int;innerClassMethod1;();{};public;String;innerClassMethod2;();{};public;boolean;innerClassMethod3;();{};
