@@ -1,0 +1,1 @@
+public;int;mainClassMethod1;();{};public;void;mainClassMethod2;();{};public;String;randomMethodStringReturn;();{};public;void;randomMethodVoid__2_;();{};
