@@ -1,0 +1,26 @@
+class Main {
+
+	private int number;
+	private String name;
+
+	public int mainClassMethod1(int a, int b){
+		return a + b;
+	}
+
+	public void mainClassMethod2 (int a, int b, char c) {
+		//comment
+		System.out.println("aaaa");
+	}
+
+	public String randomMethodStringReturn(int a, int b) throws Exception {
+		/* multi line coment
+		to include here */
+		int c = a + b;
+		return "222";
+	}
+
+	public void randomMethodVoid__2_ (int a, int b) {
+		System.out.println("222");
+	}
+
+}
